2004-12-01 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_New.cc,
	  src/Frame_Resizer_Base.cc: Fixed a crasher with the New Partition Dialog (thanks to Tino for reporting)

2004-11-30 Bart Hakvoort  <gparted@users.sf.net>

	* src/fat16.cc,
	  src/fat32.cc: implemented correct filesystemcheck using dosfsck.

2004-11-30 Bart Hakvoort  <gparted@users.sf.net>

	* include/FileSystem.h,
	  src/FileSystem.cc: Execute_Command() now returns exit status of executed command
	* the filesystemclasses: returnvalue (bool) is now set according to the return status of the command
	
2004-11-29 Bart Hakvoort  <gparted@users.sf.net>

	* src/GParted_Core.cc: It seemed some kernels remove and re-add blockdevicepaths after the commit_to_os. This caused trouble at some points
	  where the path was required. I decided to sleep 1 sec after each scan. So rescanning devices will take 1 extra second per device :|
	* src/Win_GParted.cc: fixed typo in string.

2004-11-29 Bart Hakvoort  <gparted@users.sf.net>

	* Every devicescan now tests on beforehand if the kernel is able to reread the partitiontable. If the kernel is unable to do
	  this, i disallow most operations. This may seem weird and even a bad thing to do, but the fact is it protects
	  the innocent user from a lot of potential damage. Till the linuxkernel is able to reread partitiontables no matter what, this seems
	  to be the best option. Of course a dialog with information will popup whenever such a situation is encountered.
	  In a next release i might consider adding an 'advanced mode' for users who know what they're doing.

2004-11-28  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS. 

2004-11-28 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_New.cc: selecting 'extended partition' twice caused a segfault. i cannot believe i didn't detect this bug earlier :| Fixed.
	  also made it possible to create an unformatted partition.