@@ -1,3 +1,8 @@
+2004-12-02 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/Win_GParted.cc,
+	  src/TreeView_Detail.cc: fixed a minor annoying with treeviewdrawing.(Really minor ;) )
+
 2004-12-01 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/Dialog_Partition_New.cc,
